force-app/main/default/objects/Survey__c/fields/Max_Questions_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Max_Questions_Per_Page__c</fullName>
    <description>The number of questions that appear on a single page of the survey</description>
    <inlineHelpText>The number of questions that appear on a single page of the survey</inlineHelpText>
    <label>Max Questions Per Page</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>