force-app/main/default/objects/Survey__c/fields/Paginated__c.field-meta.xml
<CustomField>
    <fullName>Paginated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the survey will be paginated, with a select number of questions per page</description>
    <inlineHelpText>If checked, the survey will be paginated, with a select number of questions per page</inlineHelpText>
    <label>Paginated</label>
    <type>Checkbox</type>
</CustomField>