force-app/main/default/objects/Survey__c/fields/Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Message__c</fullName>
    <description>The message to display to users after a survey is submitted</description>
    <inlineHelpText>The message to display to users after a survey is submitted</inlineHelpText>
    <label>Thank You Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>