force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Paginated__c</columns>
    <columns>Max_Questions_Per_Page__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>